--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "^10.2.0",
     "next-redux-wrapper": "^6.0.2",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4"
   },
   "devDependencies": {
     "@babel/core": "^7.14.2",
